--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<main class = "main">
+    <div class="login-form">
+        <input class = "field" type="text" placeholder="Login">
+        <input class = "field" type="password" placeholder="******">
+        <a href="#" class="see-password"></a>
+        <button>ВОЙТИ</button>
+    </div>
+</main>
+<script src = "index.js"></script>
 </body>
 </html>
